hphp/test/quick/parse_fail_shapes.php.expectf

Fatal error: syntax error, unexpected T_VARIABLE, expecting ')' in %s on line 5
